--- a/homeworks/hw3/index.html
+++ b/homeworks/hw3/index.html
@@ -1,6 +1,47 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+	<head>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<link rel="stylesheet" type="text/css" href="assets/css/initial.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+		<link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+	</head>
+	<body>
+	<div id="content">
+		<div id="navbar">
+			<div class="navbar-item">Home</div>
+			<div class="navbar-item">Discover</div>
+			<div class="navbar-item">Profile</div>
+		</div>
+		<div id="header">
+			<div id="profile-pic"> <img src="img/finstapic.jpeg" /> </div>
+			<div id="information">
+				<div id="username"> Abraham Viteri </div>
+				<div id="follow-button">+ Follow</div>
+				<div id="about">
+					I am 22, a 4th year majoring in Economics and Data Science at Berkeley, and am Ascendant 1 in Valorant!
+				</div>
+			</div>
+		</div>
+		<div id="pictures">
+			<div class="row">
+				<div class="item"><img src="img/finsta1.jpeg" /></div>
+				<div class="item"><img src="img/finsta2.jpeg" /></div>
+				<div class="item"><img src="img/finsta3.jpeg" /></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="img/finsta4.jpeg" /></div>
+				<div class="item"><img src="img/finsta5.jpeg" /></div>
+				<div class="item"><img src="img/finsta6.jpeg" /></div>
+			</div>
+			<div class="row">
+				<div class="item"><img src="img/finsta7.JPG" /></div>
+				<div class="item"><img src="img/finsta8.jpeg" /></div>
+				<div class="item"><img src="img/finsta9.jpeg" /></div>
+			</div>
+		</div>
+	</div>
+	<a href="design_responses.html" id="design">Click to view design responses</a>
+	</body>
 </html>
