--- a/homeworks/hw6/design_responses.html
+++ b/homeworks/hw6/design_responses.html
@@ -39,7 +39,7 @@
 					<ul>
 						<li>
 							<p>On a scale from 1 to 10, how much did you enjoy reading this article? If you scored below a five, please briefly explain why.</p>
-							<p> 10 </p>
+							<p> 10/10 would read again </p>
 						</li>
 					</ul>
 				</div>
