--- a/homeworks/hw8/index.html
+++ b/homeworks/hw8/index.html
@@ -1,6 +1,55 @@
-<!DOCTYPE html>
 <html>
-    <body>
-        Homework 1
-    </body>
+<head>
+	<link href="https://fonts.googleapis.com/css?family=Poppins&display=swap" rel="stylesheet">
+	<link rel="stylesheet" href="assets/css/style.css">
+	<title>Homework 8 - Favorite Songs</title>
+</head>
+
+<body>
+
+<div class="content">
+	<h1>Favorites</h1>
+
+	<!-- Problem 3.1 -->
+	<div id="songs">
+		<ul id="songs-first-half">
+			<li>
+				<div class="song-title">Yukon (Interlude)</div>
+				<div class="song-artist">Joji</div>
+			</li>
+			<li>
+				<div class="song-title">As It Was</div>
+				<div class="song-artist">Harry Styles</div>
+			</li>
+			<li>
+				<div class="song-title">Glimpse of Us</div>
+				<div class="song-artist">Joji</div>
+			</li>
+		</ul>
+		<ul id="songs-second-half">
+			<li>
+				<div class="song-title">Feeling Like The End</div>
+				<div class="song-artist">Joji</div>
+			</li>
+			<li>
+				<div class="song-title">Gasoline</div>
+				<div class="song-artist">The Weeknd</div>
+			</li>
+			<li>
+				<div class="song-title">How Do I Make You Love Me?</div>
+				<div class="song-artist">The Weeknd</div>
+			</li>
+		</ul>
+	</div>
+
+	<button id="toggle-button">Show 3 songs</button>
+	<p>
+		<a href="design_responses.html" style = "color: white"id = "design-response-link">Design Responses Here</a>
+	</p>
+</div>
+
+<script src="assets/js/script.js"></script>
+		
+</body>
+
 </html>
