--- a/labs/lab7/index.html
+++ b/labs/lab7/index.html
@@ -1,6 +1,24 @@
 <!DOCTYPE html>
 <html>
-    <body>
-        Lab 1
-    </body>
+	<head>
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link rel="stylesheet" type="text/css" href="assets/css/style.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1.0">
+		<meta charset="utf-8">
+	</head>
+	<body>
+
+		<div class="content">
+			<section id="post">
+				<img src="assets/img/Screenshot 2022-12-02 at 8.25.49 PM.png" id="screenshot1"/>
+                <img src="assets/img/Screenshot 2022-12-02 at 8.32.54 PM.png" id="screenshot2"/>
+
+
+			</section>
+
+
+		</div>
+
+	</body>
 </html>
